--- a/package.json
+++ b/package.json
@@ -9,14 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@amcharts/amcharts4": "^4.10.25",
+    "@amcharts/amcharts4-fonts": "^4.0.1",
+    "@amcharts/amcharts4-geodata": "^4.1.23",
     "@chakra-ui/react": "^1.8.8",
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
+    "chart.js": "^2.9.4",
     "formik": "^2.2.9",
     "formik-chakra-ui": "^1.6.0",
     "framer-motion": "^6",
     "next": "12.1.6",
     "react": "18.1.0",
+    "react-chartjs-2": "^2.11.1",
     "react-dom": "18.1.0",
     "react-icons": "^4.3.1",
     "yup": "^0.32.11"
