feat: finish design for doctors and patients pages

--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "@amcharts/amcharts4": "^4.10.25",
     "@amcharts/amcharts4-fonts": "^4.0.1",
     "@amcharts/amcharts4-geodata": "^4.1.23",
-    "@chakra-ui/react": "^1.8.8",
+    "@chakra-ui/icons": "^2.0.0",
+    "@chakra-ui/react": "^2.0.0",
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
     "chart.js": "^2.9.4",
