--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@chakra-ui/react": "^2.0.0",
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
+    "axios": "^0.27.2",
     "chart.js": "^2.9.4",
     "formik": "^2.2.9",
     "formik-chakra-ui": "^1.6.0",
@@ -25,6 +26,10 @@
     "react-chartjs-2": "^2.11.1",
     "react-dom": "18.1.0",
     "react-icons": "^4.3.1",
+    "react-redux": "^8.0.1",
+    "redux": "^4.2.0",
+    "redux-thunk": "^2.4.1",
+    "universal-cookie": "^4.0.4",
     "yup": "^0.32.11"
   },
   "devDependencies": {
