add real data for dashboard

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,12 +1,23 @@
 {
     "cSpell.words": [
+        "chakra",
+        "احصائيات",
+        "الاطباء",
         "الالغاء",
+        "الانضمام",
+        "التي",
         "الحالة",
+        "الرئيسية",
         "الرفض",
         "السنة",
         "الشهر",
+        "المدن",
+        "المرضى",
         "الموافقة",
+        "اليها",
         "اليوم",
-        "معلقة"
+        "تاريخ",
+        "معلقة",
+        "ينتمي"
     ]
 }
